--- a/index.html
+++ b/index.html
@@ -25,12 +25,17 @@ START button
     <!-- going to use answer-box to for the CSS properties, then two other classes... 
         one for wrong answers, one for right answers -->
     <div id="answer-buttons" class="answer-grid"></div>
-    <button class="answer-box "> Answer 1</button>
-    <button class="answer-box"> Answer 2</button>
-    <button class="answer-box"> Answer 3</button>
-    <button class="answer-box"> Answer 4</button>
+    <button id= "choice1", class="answer-box "> Answer 1</button>
+    <button id= "choice2",class="answer-box"> Answer 2</button>
+    <button id= "choice3",class="answer-box"> Answer 3</button>
+    <button id= "choice4",class="answer-box"> Answer 4</button>
 </div>
 
+<section class="time">
+<div class="time_text">Time remaining</div>
+<div class="time_number">75 </div>
+
+</section>
 <section class="selectors">
 
     <button id="start" class="start-button"> Start></button>
