added javascript functions

--- a/index.html
+++ b/index.html
@@ -6,42 +6,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="assets/style.css" rel="stylesheet">
-    <title>Document</title>
+    <title>Quiz App</title>
 </head>
 
 <body>
-    <!-- psuedocode needed:
-     container 
-    h2/h3 holding the questions
-ordered list, numerical?
-START button
- -->
-</body>
+    <h1 class="title">Welcome to the quiz app!</h1>
 
-<div id="main_area">
-    <div id="question_container" class="hide"></div>
-    <!-- h1 is where questions will go. ID Question for referencing in JS -->
-    <h1 id="question">question text goes here</h1>
-    <!-- going to use answer-box to for the CSS properties, then two other classes... 
+
+
+
+    <container id="main_area">
+        <div id="question_container" class="hide"></div>
+        <!-- h1 is where questions will go. ID Question for referencing in JS -->
+        <h1 id="question">question text goes here</h1>
+        <!-- going to use answer-box to for the CSS properties, then two other classes... 
         one for wrong answers, one for right answers -->
-    <div id="answer-buttons" class="answer-grid"></div>
-    <button id= "choice1", class="answer-box "> Answer 1</button>
-    <button id= "choice2",class="answer-box"> Answer 2</button>
-    <button id= "choice3",class="answer-box"> Answer 3</button>
-    <button id= "choice4",class="answer-box"> Answer 4</button>
-</div>
+        <div id="answer-buttons" class="btn-grid"></div>
+        <section class="pair1">
+            <button id="choice1" class="answer-box "> Answer 1</button>
+            <button id="choice2" class="answer-box"> Answer 2</button>
+        </section>
+        <section class="pair2">
+            <button id="choice3" class="answer-box"> Answer 3</button>
+            <button id="choice4" class="answer-box"> Answer 4</button>
+        </section>
 
-<section class="time">
-<div class="time_text">Time remaining</div>
-<div class="time_number">75 </div>
 
-</section>
-<section class="selectors">
+        <section class="selectors">
 
-    <button id="start" class="start-button"> Start></button>
-    <button id="next" class="next-button"> Next</button>
-</section>
-</div>
-<script src="javascript.js"></script>
+            <button id="start" class="start-button"> Start></button>
+            <button id="next" class="next-button"> Next</button>
+        </section>
+    </container>
+
+    <section class="time">
+        <div class="time_text"></div>
+        <div class="time_number"></div>
+    </section>
+    <section class="score">
+       <div class="score_number"></div>
+    </section>
+    </div>
+    <script src="javascript2.js"></script>
+</body>
 
 </html>
