added questions, fixed timer

--- a/index.html
+++ b/index.html
@@ -38,13 +38,17 @@
             <button id="next" class="next-button"> Next</button>
         </section>
     </container>
-
+<div id="ScoreTrack" class="hide"> 
+    <h2>input your name here!</h2>
+<input type="text" id="inputName">
+<button id="inputNameButton">Submit</button>
+</div>
     <section class="time">
         <div class="time_text"></div>
         <div class="time_number"></div>
     </section>
     <section class="score">
-       <div class="score_number"></div>
+       <ul class="score_number"></ul>
     </section>
     </div>
     <script src="javascript2.js"></script>
