case sensitive issue when calling Javascript in HTML. capitalized the J in Javascript2 to match file path.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
        <ul class="score_number"></ul>
     </section>
     </div>
-    <script src="javascript2.js"></script>
+    <script src="Javascript2.js"></script>
 </body>
 
 </html>
